<resources>
    <string name="app_name" translatable="false">4 AMIGOS</string>
    <string name="_4_amigos_stand_up_comedy" translatable="false">4 AMIGOS - STAND UP COMEDY</string>
    <string name="title_activity_sobre4amigos">Sobre os 4 Amigos</string>
    <string name="btn_sobre_o_4_amigos">Sobre o 4 AMIGOS</string>
    <string name="btn_loja_ofical">Loja ofical</string>
    <string name="btn_remover_propagandas">Remover propagandas</string>
    <string name="btn_enviar_feedback">Enviar feedback</string>
    <string name="btn_compartilhar">Compartilhar</string>
    <string name="txt_version_4_amigos_v_1_0" translatable="false">4 AMIGOS v.1.0</string>
    <string name="txt_titulo_menu">Nome</string>
    <string name="txt_desc_menu">Descrição constrangedora!</string>
    <string name="introSobre">“4 Amigos” é um show de stand-up comedy composto por Dihh Lopes,
                Márcio Donato, Afonso Padilha e Thiago Ventura.</string>
    <string name="sobre">
                    Os comediantes Dihh Lopes, Marcio Donato, Thiago Ventura e Afonso Padilha, são
                    amigos de longa data, e se juntam para realizar este espetáculo de Stand Up
                    Comedy, de cara limpa, sem adereços, os 4 se revezam no palco por cerca de 20
                    minutos cada, contando suas melhores observações do cotidiano. Com 4 anos de
                    estrada, os 4 comediantes por fim se juntaram para realizar este projeto. Com
                    estilos diferentes um do outro, cada um com suas particularidades, o show
                    “4 Amigos” tem todos os ingredientes que contagiam a plateia, trazendo
                    problemas particulares para arrancar boas risadas.</string>
    <string name="o_show_title">O show</string>
    <string name="o_show_txt">O nome fala por si só, são 4 amigos dividindo o
                            palco no formato clássico de stand up comedy. O diferencial deste show
                            é que os 4 são extremamente íntimos uns dos outros, e este vínculo fica
                            nítido para a plateia ao final da apresentação, onde os 4 comediantes
                            juntos contam particularidades uns dos outros, tornando o público cada
                            vez mais intimo e próximo do elenco.</string>
    <string name="txt_criador_armax7" translatable="false">Armax7</string>
    <string name="pNome">Deu erro \n&#160;&#160;neh?</string>
    <string name="pDesc">Puts, reporta ai por favor…</string>
    <string name="pInsta">estragam</string>
    <string name="pYout">youtoba</string>
    <string name="thi" translatable="false">Thiago \n&#160;&#160;Ventura</string>
    <string name="afo" translatable="false">Afonso \n&#160;&#160;Padilha</string>
    <string name="dih" translatable="false">Dihh \n&#160;&#160;Lopes</string>
    <string name="mar" translatable="false">Márcio \n&#160;&#160;Donato</string>
    <string name="thi_yout" translatable="false">Thiago Ventura</string>
    <string name="afo_yout" translatable="false">Afonso Padilha</string>
    <string name="dih_yout" translatable="false">Dihh Lopes</string>
    <string name="mar_yout" translatable="false">Márcio Donato</string>
    <string name="thi_insta" translatable="false">\@othiagoventura</string>
    <string name="afo_insta" translatable="false">\@oafonsopadilha</string>
    <string name="dih_insta" translatable="false">\@odihhlopes</string>
    <string name="mar_insta" translatable="false">\@omarciodonato</string>
    <string name="thiagoVenturaR">Criador da “Pose de Quebrada”, difundida nas redes sociais por
        Neymar, Gabriel Jesus, mas também por Mbappé e o piloto de Fórmula 1 Lewis Hamilton, o
        humorista Thiago Ventura é hoje o principal nome do stand up comedy do país.</string>
    <string name="afonsoPadilhaR">Foi roteirista do Porta dos Fundos e Comedy Central. Hoje Afonso
        Padilha é um dos principais nomes do país e viaja com seus shows solo e com o grupo 4 Amigos
        do qual é integrante junto com Thiago Ventura, Dihh Lopes e Marcio Donato.</string>
    <string name="dihLopesR">Dihh Lopes é nascido em São Paulo e começou no stand up comedy em 2009.
        … Ele é um dos fundadores e integrante do 4 Amigos, grupo de comédia stand up que está
        fazendo enorme sucesso em todo o Brasil.</string>
    <string name="marcioDonatoR">Márcio Donato é integrante dos grupos "Comédia Império" e "4 Amigos".
        Se destaca por sua versatilidade em abordar temas variados. Sua característica forte é seu
        temperamento explosivo, coisas idiotas e sem explicação o irritam muito por isso ele desabafa
        tudo no palco de uma forma bem engraçada. </string>
    <string name="thiagoVenturaD">Administrador formado, fez oficina de improvisação teatral, teatro
        no Teatro Escola Macunaíma, faz Stand Up Comedy desde 2010. Um dos fundadores do grupo Riso
        Ereto junto com Dihh Lopes. \n Na televisão, já participou dos programas “Agora é Tarde com
        Danilo Gentili” (Rede Bandeirantes), “Programa Raul Gil” (SBT) entre outros. Recentemente
        participou do quadro Quem Chega Lá, do “Domingão do Faustão”, exibido pela rede Globo.</string>
    <string name="afonsoPadilhaD">Afonso padilha é comediante, humorista e roteirista.\n Tem 3 especiais
        de comédia no seu canal do YouTube, um na netflix mundial e atualmente está rodando com seu
        quarto show solo, ALMA DE POBRE, no qual fala sobre estigma social, usando histórias pessoais
        pra ilustrar que não importa o quanto você ganhe dinheiro continuará sendo pobre.</string>
    <string name="dihhLopesD">O comediante Dihh Lopes começou no stand-up em 2010, é um dos formadores
        do grupo Riso Ereto, no que esteve em cartaz no Teatro do Corinthians, em São Paulo. \n\n
        Abordando temas como; divida em banco e capoeira, Dihh Lopes cativa o público com suas
        observações inusitadas, e seus bordões sempre comentados pelo público. “vocês são da hora”
        e o “Sem Maldade”. Na televisão passou pelo programa “Tudo a Ver” da Rede Record.</string>
    <string name="marcioDonatoD">Mas conhecido como “Martchola”, apresenta uma grande versatilidade
        por abordar variados temas. Já fez shows na Argentina nos bares “La Casa de Sr. Duncan”, ”The
        Cavern Pub“ e no \n “Comedians ” em São Paulo.\n Conhecido pelo seu estilo raivoso, arranca
        gargalhadas da plateia com seu jeito inconformado de ser.</string>
    <string name="site4amigos" translatable="false">https://lojaoficial4amigos.com.br/</string>
    <string name="siteLogos" translatable="false">https://icons8.com/icon/pack/logos/material</string>
    <string name="siteEmoticons" translatable="false">Ícones feitos por <a href="https://www.flaticon.com/br/autores/freepik"
        title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/br/" title="Flaticon">
        www.flaticon.com</a></string>
    <string name="menu_piadas">Piadas</string>
    <string name="menu_stickers">Stickers</string>
    <string name="menu_sobre">Sobre</string>
    <string name="noDisponible">Indisponivel no momento.</string>
    <string name="a7hggc" translatable="false">a</string>
    <string name="m19" translatable="false">b</string>
    <string name="x30kjgdf" translatable="false">b</string>
    <string name="v285388" translatable="false">c</string>
    <string name="alguma" translatable="false">c</string>
    <string name="nd1" translatable="false">d</string>
    <string name="sequencia_kk" translatable="false">e</string>
    <string name="pra_q" translatable="false">e</string>
    <string name="u27" translatable="false">e</string>
    <string name="o21" translatable="false">f</string>
    <string name="w29" translatable="false">f</string>
    <string name="tentando" translatable="false">f</string>
    <string name="b8jnbc" translatable="false">f</string>
    <string name="t26" translatable="false">0</string>
    <string name="k17null" translatable="false">0</string>
    <string name="h14" translatable="false">1</string>
    <string name="p22" translatable="false">1</string>
    <string name="s25kkk" translatable="false">1</string>
    <string name="fazer" translatable="false">1</string>
    <string name="nd5" translatable="false">1</string>
    <string name="n20" translatable="false">2</string>
    <string name="nd2oibb" translatable="false">2</string>
    <string name="nd4" translatable="false">3</string>
    <string name="nd6" translatable="false">4</string>
    <string name="nifelsed3" translatable="false">4</string>
    <string name="r24" translatable="false">4</string>
    <string name="j16" translatable="false">4</string>
    <string name="i15xama" translatable="false">5</string>
    <string name="esta" translatable="false">5</string>
    <string name="z32" translatable="false">7</string>
    <string name="l18" translatable="false">8</string>
    <string name="q23" translatable="false">9</string>
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="more_info_button">More info about sticker pack</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one">Sticker Pack</item>
        <item quantity="other">Sticker Packs</item>
    </plurals>
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="title_activity_sticker_pack_info">Info</string>
    <string name="view_webpage">View webpage</string>
    <string name="send_email">Send email</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="license_agreement">License agreement</string>
    <string name="info_screen_tray_icon">Tray icon</string>
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <string name="info_send_email_to_prompt">Send email with</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>
</resources>