<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myConst"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".sobreFragment"
    tools:ignore="ContentDescription, RtlSymmetry, RtlHardcoded, NestedScrolling, SmallSp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineD24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopUserView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="66dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="84dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ListView
                android:id="@+id/minhaLista"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="20dp"
                android:divider="@color/invisivel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_4amigos_sobre">

            </ListView>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.1"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_sobre_4_amigos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:elevation="0dp"
                        android:fontFamily="sans-serif"
                        android:paddingStart="16dp"
                        android:shadowColor="#FFFFFF"
                        android:text="@string/btn_sobre_o_4_amigos"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/gogPreto"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_loja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:fontFamily="sans-serif"
                        android:paddingStart="16dp"
                        android:text="@string/btn_loja_ofical"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/gogPreto"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@+id/btn_sobre_4_amigos"
                        app:layout_constraintStart_toStartOf="@+id/btn_sobre_4_amigos"
                        app:layout_constraintTop_toBottomOf="@+id/btn_sobre_4_amigos" />

                    <Button
                        android:id="@+id/btn_noAds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:fontFamily="sans-serif"
                        android:paddingStart="16dp"
                        android:text="@string/btn_remover_propagandas"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/gogPreto"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@+id/btn_sobre_4_amigos"
                        app:layout_constraintStart_toStartOf="@+id/btn_sobre_4_amigos"
                        app:layout_constraintTop_toBottomOf="@+id/btn_loja" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="20dp"
                        app:layout_constraintBottom_toTopOf="@+id/btn_feed"
                        app:layout_constraintStart_toStartOf="@+id/btn_feed"
                        app:layout_constraintTop_toBottomOf="@+id/btn_feed"
                        app:srcCompat="@drawable/c_enviar_feed" />

                    <Button
                        android:id="@+id/btn_feed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:fontFamily="sans-serif"
                        android:paddingStart="50dp"
                        android:text="@string/btn_enviar_feedback"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/gogPreto"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_noAds" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:elevation="20dp"
                        app:layout_constraintBottom_toTopOf="@+id/btn_compartilhar"
                        app:layout_constraintStart_toStartOf="@+id/btn_compartilhar"
                        app:layout_constraintTop_toBottomOf="@+id/btn_compartilhar"
                        app:srcCompat="@drawable/c_compartilhar" />

                    <Button
                        android:id="@+id/btn_compartilhar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:fontFamily="sans-serif"
                        android:paddingStart="50dp"
                        android:text="@string/btn_compartilhar"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/gogPreto"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_feed" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:alpha="0.1"
                android:text="@string/txt_version_4_amigos_v_1_0"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="102dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@color/azulDark4A"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_4amigos_sobre"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom|start|center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/b_logo_4_amigos" />

        <TextView
            android:id="@+id/txt_title_4amigos_sobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start|center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:breakStrategy="high_quality"
            android:fontFamily="@font/rajdhani_bold"
            android:paddingStart="10dp"
            android:singleLine="false"
            android:text="@string/_4_amigos_stand_up_comedy"
            android:textAlignment="viewStart"
            android:textColor="@color/gogBranco"
            android:textSize="23sp"
            android:translationZ="4dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>