<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/azulDark4A"
    tools:ignore="ContentDescription, RtlSymmetry"
    tools:context=".sobre_oAmigo_Activity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineD24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineE24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBaseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarThi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_collapseMode="parallax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <TextView
            android:id="@+id/nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@android:color/transparent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/img_fundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/c_rir" />

    <TextView
        android:id="@+id/txt_title_sobre_MASTER"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rajdhani_bold"
        android:text="@string/pNome"
        android:textColor="@color/gogBranco"
        android:textSize="66sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineE"
        app:layout_constraintStart_toStartOf="@+id/guidelineD24dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarThi" />

    <TextView
        android:id="@+id/txt_desc_sobre_MASTER"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pDesc"
        android:textColor="@color/gogBranco"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineE24dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineD24dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_sobre_MASTER" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_seguir_insta"
        app:layout_constraintStart_toStartOf="@+id/btn_seguir_insta"
        app:layout_constraintTop_toBottomOf="@+id/btn_seguir_insta"
        app:srcCompat="@drawable/b_logo_instagram" />

    <Button
        android:id="@+id/btn_seguir_insta"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/c_btn_seguir_instagram"
        android:paddingStart="55dp"
        android:paddingEnd="20dp"
        android:text="@string/pInsta"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/gogBranco"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_seguir_youtube"
        app:layout_constraintStart_toStartOf="@+id/guidelineD24dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc_sobre_MASTER" />

    <Button
        android:id="@+id/btn_seguir_youtube"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/c_btn_seguir_youtube"
        android:paddingStart="55dp"
        android:paddingEnd="20dp"
        android:text="@string/pYout"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/gogBranco"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBaseBottom"
        app:layout_constraintStart_toStartOf="@+id/guidelineD24dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_seguir_insta" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_seguir_youtube"
        app:layout_constraintStart_toStartOf="@+id/btn_seguir_youtube"
        app:layout_constraintTop_toBottomOf="@+id/btn_seguir_youtube"
        app:srcCompat="@drawable/b_logo_youtube" />

</androidx.constraintlayout.widget.ConstraintLayout>